// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";

package com.example.replicated.map.domain;

option java_outer_classname = "SomeMapDomain";

message SomeKey {
  string key = 1;
}
